# VNStock_Data_FSDS

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: drift.yaml  generator.yaml
contracts/: dim_ticker.v1.json  fact_daily_price.v1.json  feat_stream_intraday.v1.json  feat_ticker_daily.v1.json  raw_market_events.v1.json  raw_ohlcv_daily.v1.json  raw_ohlcv_daily.v2.json  stg_events_quarantine.v1.json  stg_quotes.v1.json  stg_trades.v1.json
dags/: bronze_offline_ingest.py  bronze_stream_ingest.py  delta_maintenance.py  feat_daily_job.py  feat_stream_job.py  flink_silver_stream.py  gold_dimensions_and_facts.py  silver_daily.py  silver_stream.py
datahub/: README.md  lineage.yml  recipe.yml
docker/airflow/: Dockerfile
docker/flink/: Dockerfile
docker/hive/: hive-site.xml
docker/spark/: Dockerfile
docs/: architecture.md  data_governance.md  docker.md  flink_optimization.md  generator.md  novel_ideas.md  orchestration_governance.md  processing_jobs.md  rubric_evidence.md  schema_design.md  spark_optimization.md  storage_optimization.md
docs/evidence/: flink_v10_verification.md  generator_quality_report.md
document/coursework/: vnstock-data-pipeline-toan-tap.md
generator/: __init__.py  calendar.py  generators.py  main.py  problems.py  writers.py
jobs/: __init__.py  bronze_ingest.py  drift_monitor.py  gold_model.py  silver_transform.py  spark_session.py
scripts/: init_vendor_db.sql  run_pipeline.py  spark_ui_capture.py  trino_examples.sql
tests/: __init__.py
(+32 files in other folders)
