[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["generator*", "jobs*"]

[project]
name = "vnstock-data-pipeline"
version = "0.1.0"
description = "Vietnam Stock Market Data Pipeline — Kỳ 1 (M1-M12)"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0",
    "deltalake>=0.18.0",
    "delta-spark>=3.1.0",
    "apache-airflow>=2.9.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "kafka-python>=2.0.2",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "minio>=7.2.0",
    "trino>=0.329.0",
    "vnstock>=4.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # Formatter handles code wrapping; long SQL/log strings stay readable.
    "N812", # PySpark's documented convention is `functions as F`.
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.uv]
environments = ["sys_platform == 'linux'"]
